--- a/css.css
+++ b/css.css
@@ -5,20 +5,20 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 375px;
   min-height: 100vh;
-  height: 900px;
+  height: 100%;
   background-color: #ff7978;
   background-image: url("assets/images/bg-intro-mobile.png");
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  padding: 0 20px 0 20px;
+  padding: 100px 20px 60px 20px;
 }
 
 .information {
   text-align: center;
+  margin-bottom: 60px;
 }
 
 .information__title {
@@ -54,20 +54,61 @@ body {
   background-color: white;
 }
 .form {
-  padding: 10px 0 10px 0;
-  height: 420px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+  padding: 30px 30px 30px 30px;
 }
 
+.form__container {
+  position: relative;
+  width: 100%;
+  margin-bottom: 30px;
+}
 .form__input {
-  width: 300px;
+  width: 100%;
   height: 50px;
-  outline: none;
+  font-weight: bold;
   padding-left: 14px;
   border: 1px solid rgb(184, 184, 184);
+  border-radius: 8px;
+}
+
+.form__img {
+  position: absolute;
+  top: 13px;
+  right: 22px;
+  display: none;
+}
+
+.form__img--fn {
+  display: none;
+}
+.form__img--ln {
+  display: none;
+}
+.form__img--email {
+  display: none;
+}
+.form__img--pass {
+  display: none;
+}
+
+.form__error {
+  font-size: 0.9rem;
+  text-align: right;
+  color: red;
+  margin-top: 5px;
+}
+
+.form__error--fn {
+  display: none;
+}
+.form__error--ln {
+  display: none;
+}
+.form__error--email {
+  display: none;
+}
+.form__error--pass {
+  display: none;
 }
 
 .form__input::placeholder {
@@ -77,7 +118,7 @@ body {
 .form__button {
   color: inherit;
   background-color: #37cc8a;
-  width: 300px;
+  width: 100%;
   height: 50px;
   border: none;
   outline: none;
@@ -91,12 +132,32 @@ body {
 .form__terms {
   font-size: 0.9rem;
   text-align: center;
-  width: 300px;
+  width: 100%;
   color: black;
+  margin-top: 20px;
 }
 
 .form__terms span {
   color: red;
   font-weight: bold;
   cursor: pointer;
+}
+
+@media screen and (min-width: 900px) {
+  .container {
+    width: 100%;
+    height: 100vh;
+    flex-direction: row;
+  }
+  .information {
+    width: 500px;
+    text-align: left;
+  }
+  .information__title {
+    font-size: 2.5rem;
+    line-height: 40px;
+  }
+  .information .cards {
+    width: 500px;
+  }
 }
